--- a/management-report/markdown/management-report.Rmd
+++ b/management-report/markdown/management-report.Rmd
@@ -225,7 +225,7 @@ err %>%
   mutate(err_rate = paste0(err_rate, "%")) %>%
   pivot_wider(names_from = fy,
               values_from = err_rate,
-              values_fill = list(err_rate = "-")) %>%
+              values_fill = list(err_rate = "\\-")) %>%
   rename(`Health Board` = health_board) %>%
   kable() %>%
   kable_styling(full_width = FALSE) %>%
