--- a/management-report/markdown/subpage-hb.Rmd
+++ b/management-report/markdown/subpage-hb.Rmd
@@ -72,10 +72,11 @@ Sidebar {.sidebar}
 
 Select Financial Year
 
-|     `r paste0(if_else(sel_fy == "2020/21", "[**2020/21**]", "[2020/21]"), "(#", hb %>% tolower() %>% str_replace_all(" &", "") %>% str_replace_all(" ", "-"), "-3)")`
+|     `r paste0(if_else(sel_fy == "2020/21", "[**2020/21**]", "[2020/21]"), "(#", hb %>% tolower() %>% str_replace_all(" &", "") %>% str_replace_all(" ", "-"), "-4)")`
 |     `r paste0(if_else(sel_fy == "2019/20", "[**2019/20**]", "[2019/20]"), "(#", hb %>% tolower() %>% str_replace_all(" &", "") %>% str_replace_all(" ", "-"), "-", "201920)")`
 |     `r paste0(if_else(sel_fy == "2018/19", "[**2018/19**]", "[2018/19]"), "(#", hb %>% tolower() %>% str_replace_all(" &", "") %>% str_replace_all(" ", "-"), "-", "201819)")`
 |     `r paste0(if_else(sel_fy == "2017/18", "[**2017/18**]", "[2017/18]"), "(#", hb %>% tolower() %>% str_replace_all(" &", "") %>% str_replace_all(" ", "-"), "-", "201718)")`
+|     `r paste0(if_else(sel_fy == "2016/17", "[**2016/17**]", "[2016/17]"), "(#", hb %>% tolower() %>% str_replace_all(" &", "") %>% str_replace_all(" ", "-"), "-", "201617)")`
 
 ***
 
