--- a/management-report/markdown/management-report.Rmd
+++ b/management-report/markdown/management-report.Rmd
@@ -233,7 +233,10 @@ err %>%
   add_header_above(
         c(" " = 1,
           "Financial Year of Diagnosis" = 5,
-          " " = 1))
+          " " = 1)) %>%
+  add_footnote(label = paste("A dash (\\-) indicates no records were submitted",
+                             "for diagnoses in this year."),
+               notation = "none")
 ```
 
 
