Add note re finalised data

--- a/management-report/markdown/management-report.Rmd
+++ b/management-report/markdown/management-report.Rmd
@@ -60,9 +60,9 @@ This report has been produced by Public Health Scotland (PHS) and contains analy
 
 These reports are an ongoing development following the implementation of the revised [Dementia PDS dataset](https://www.isdscotland.org/Health-Topics/Mental-Health/Dementia-Post-diagnostic-Support/_docs/Dementia-PDS-Definitions-and-Recording-Guidance.pdf) effective 01 April 2019. As such, they are currently marked as **DRAFT** and may be subject to change in future versions.
 
-This report contains data for individuals diagnosed with dementia between **`r format(start_date, "%d %B %Y")`** and **`r format(end_date, "%d %B %Y")`** who were referred for post diagnostic support.
+This report contains data for individuals diagnosed with dementia between **`r format(dmy(01042016), "%d %B %Y")`** and **`r format(end_date, "%d %B %Y")`** who were referred for post diagnostic support.
 
-Data are submitted to PHS by health boards on a quarterly basis. Each health board provides updated information for all individuals referred for post diagnostic support with a diagnosis date from `r format(start_date, "%d %B %Y")` onwards. Therefore, data for the full reporting period is refreshed in each management report and is based on the most recently submitted data. This report is based on data submitted in `r format(end_date + month(1), "%B %Y")` and contains data as at **`r format(end_date, "%d %B %Y")`**. 
+Data are submitted to PHS by health boards on a quarterly basis. Each health board provides updated information for all individuals referred for post diagnostic support with a diagnosis date from `r format(start_date, "%d %B %Y")` onwards. Therefore, data for diagnoses from this date onwards are refreshed in each management report and are based on the most recently submitted data. Data for diagnoses prior to `r format(start_date, "%d %B %Y")` are also included but are now final and will not be updated in future versions of this report.
 
 Information is shown at Scotland, Health Board and Integration Joint Board level using the drop down menus at the top of the page.
 
