--- a/management-report/markdown/subpage-scotland.Rmd
+++ b/management-report/markdown/subpage-scotland.Rmd
@@ -32,18 +32,23 @@ qt_text <-
 # Text to explain incomplete years / referrals still ongoing
 completeness_text <-
   case_when(
+    str_sub(sel_fy, 1, 4) < year(start_date) ~
+      paste0("Data for ", sel_fy, " are now final and will not change in ",
+             "future versions of this report."),
     complete_year == FALSE ~ 
       paste0("LDP Standard performance figures are not provided ",
              "until data is available for the full financial year."),
-    sel_fy == min_fy ~ 
-      paste0("The figures shown are now complete for this financial year and ",
-             "should not change in future versions of these reports. However, ",
-             "slight variations may be seen as data errors are resolved."),
+    sel_fy == fin_year(start_date) ~ 
+      paste0("The figures shown are now complete for this ",
+             "financial year and should not change in future ",
+             "versions of these reports. However, slight ",
+             "variations may be seen as data errors are resolved."),
     TRUE ~ 
-      paste0("As PDS for some referrals in ", sel_fy, " is still ongoing, ",
-             "it is not known yet whether or not they will meet the LDP ",
-             "standard. Therefore, the figures shown are currently provisional",
-             " and subject to change in future versions of this report.")
+      paste0("As PDS for some referrals in ", sel_fy, " is still ",
+             "ongoing, it is not known yet whether or not they ",
+             "will meet the LDP standard. Therefore, the figures ",
+             "shown are currently provisional and subject to ",
+             "change in future versions of this report.")
   )
 
 # Title for LDP table
