--- a/management-report/markdown/subpage-scotland.Rmd
+++ b/management-report/markdown/subpage-scotland.Rmd
@@ -92,7 +92,7 @@ For more information regarding how the LDP Standard is calculated and how indivi
 
 ***
 
-Please get in touch with any comments, suggestions and feedback: [phs.dementiapds@nhs.net](mailto:phs.dementiapds@nhs.net)
+Please get in touch with any comments, suggestions and feedback: [phs.dementiapds@phs.scot](mailto:phs.dementiapds@phs.scot)
 
 
 Row
